--- a/sankofa-enterprise-real/backend/requirements.txt
+++ b/sankofa-enterprise-real/backend/requirements.txt
@@ -44,8 +44,12 @@ gevent==23.7.0
 # Development & Testing
 pytest==7.4.2
 pytest-cov==4.1.0
+pytest-asyncio==0.21.1
+pytest-mock==3.11.1
 black==23.7.0
 flake8==6.0.0
+radon==6.0.1
+mypy==1.5.1
 
 # Scientific Computing
 scipy==1.11.2
