--- a/sankofa-enterprise-real/backend/requirements.txt
+++ b/sankofa-enterprise-real/backend/requirements.txt
@@ -1,82 +1,49 @@
-# Core Framework
-Flask==2.3.3
+# Core Framework - Python 3.12 Compatible
+Flask==3.0.0
 Flask-CORS==4.0.0
-Flask-JWT-Extended==4.5.3
+Flask-JWT-Extended==4.6.0
 
-# Data Processing & ML
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
-xgboost==1.7.6
-lightgbm==4.0.0
-catboost==1.2.2
+# Data Processing & ML (Python 3.12 compatible versions)
+numpy>=1.26.0
+pandas>=2.1.0
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+lightgbm>=4.1.0
 
 # Database & Cache
-redis==4.6.0
-psycopg2-binary==2.9.7
-SQLAlchemy==2.0.21
+redis==5.0.1
+psycopg2-binary==2.9.9
+SQLAlchemy==2.0.23
 
 # Security & Cryptography
-cryptography==41.0.4
-bcrypt==4.0.1
+cryptography>=41.0.0
+bcrypt==4.1.2
 PyJWT==2.8.0
 
 # HTTP & API
-requests==2.31.0
-
-# Monitoring & Logging
-datadog==0.47.0
-structlog==23.1.0
+requests>=2.31.0
 
 # Data Validation
-marshmallow==3.20.1
-cerberus==1.3.5
+marshmallow>=3.20.0
+cerberus>=1.3.0
 
 # Utilities
-python-dotenv==1.0.0
-click==8.1.7
-python-dateutil==2.8.2
+python-dotenv>=1.0.0
+click>=8.1.0
+python-dateutil>=2.8.0
 
 # Performance
-gunicorn==21.2.0
-gevent==23.7.0
+gunicorn>=21.2.0
 
 # Development & Testing
-pytest==7.4.2
-pytest-cov==4.1.0
-pytest-asyncio==0.21.1
-pytest-mock==3.11.1
-black==23.7.0
-flake8==6.0.0
-radon==6.0.1
-mypy==1.5.1
+pytest>=7.4.0
+pytest-cov>=4.1.0
+black>=23.0.0
+flake8>=6.0.0
 
 # Scientific Computing
-scipy==1.11.2
-joblib==1.3.2
-
-# Time Series
-statsmodels==0.14.0
-
-# Visualization (for model analysis)
-matplotlib==3.7.2
-seaborn==0.12.2
-
-# Feature Engineering
-feature-engine==1.6.2
-
-# Model Interpretability
-shap==0.42.1
-lime==0.2.0.1
-
-# Async Support
-asyncio==3.4.3
-aioredis==2.0.1
+scipy>=1.11.0
+joblib>=1.3.0
 
 # Configuration
-pydantic==2.3.0
-pydantic-settings==2.0.3
-
-# AWS SDK (for production deployment)
-boto3==1.28.57
-botocore==1.31.57
+pydantic>=2.5.0
